--- a/index.html
+++ b/index.html
@@ -12,5 +12,10 @@
 
 <body>
   <h1>Briana Robinson</h1>
+  <nav>
+    <ul> 
+      <li><a href"/workspaces/ifsc-1310/gordo">Gordo Assignment</a></li>
+    </ul>
+  </nav>
 </body>
 </html>
