Prototype HTML5 Assignment Submission

--- a/index.html
+++ b/index.html
@@ -9,12 +9,11 @@
   <meta name="author" content="Briana Robinson">
 
 </head>
-
 <body>
   <h1>Briana Robinson</h1>
   <nav>
     <ul> 
-      <li><a href"/workspaces/ifsc-1310/gordo">Gordo Assignment</a></li>
+      <li><a href="prototype/index.html">Gordo Assignment</a></li>
     </ul>
   </nav>
 </body>
