Prototype HTML5 Assignment

--- a/index.html
+++ b/index.html
@@ -16,5 +16,8 @@
       <li><a href="prototype/index.html">Gordo Assignment</a></li>
     </ul>
   </nav>
+  <h2>“Thoughts on Web Accessibility”</h2>
+  <p> Web accessiblity means that anyone no matter what disability can access and obtain information from a web source.</p>
+  <p> It is important to make you web source accessible because you will be able to have more consumers. It is also important if important news or information is being shared. It would help being able to spread out the word more and maybe even save a life. </p>
 </body>
 </html>
