--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
   <nav>
     <ul> 
       <li><a href="prototype/index.html">Gordo Assignment</a></li>
+      <li><a href="css-demo/index.html"> CSS-Demo</a></li>
+      <li><a href="flexbox-froggy/assets/img/Screenshot (3).png"> Flexbox Froggy</a></li>
+      <li><a href="gravit-icon/assets/img/Screenshot (4).png"> Gravit Icon</a></li>
+      <li><a href="icon-in-class/assets/img/Icon in Class.png"> Icon In Class</a></li>
+      <li><a href="spacex-v1/index.html"> Space X V1</a></li>
     </ul>
   </nav>
   <h2>“Thoughts on Web Accessibility”</h2>
